--- a/summer.html
+++ b/summer.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Git Drill 2</title>
+    <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
 </head>
 <body>
-    <a href="./summer.html">What Conor likes.</a>
+    <p>I like a lot of things, but the thing I like most is probably Galvanize. I have learned so much here.</p>
 </body>
 </html>
