fixed link on index

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <a href="./summerDir/summer.html">What Conor likes.</a>
-    <a href="./finished.html"></a>
+    <a href="./finished.html">all done</a>
 </body>
 </html>
